--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6229,3 +6229,84 @@ Slideshow
     height: 3.5rem;
   }
 }
+
+
+/* =======================================================================
+
+Hailey Jane Custom Sections & Styles
+========================================================================== */
+
+
+.hj-featured-collection__info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  @include media-query($large-up) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+}
+
+.hj-featured-collection__title {
+  @include media-query($large-up) {
+    margin: 0;
+  }
+}
+
+.hj-featured-collection__link {
+  margin: 0;
+}
+
+.hj-product-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hj-product-grid-item {
+  &:hover {
+    .hj-product-grid-item__overlay-background {
+      opacity: 0.8;
+    }
+  }
+}
+
+.hj-product-grid-item__overlay-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0;
+  -webkit-transition: opacity .25s linear;
+  transition: opacity .25s linear;
+  z-index: 3;
+}
+
+.hj-product-grid-item__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: opacity .25s linear;
+  -webkit-transition: opacity .25s linear;
+  opacity: 0;
+  z-index: 3;
+
+  &:hover {
+    opacity: 1;
+  }
+}
