HJ Custom Collections Page - Simplified layout using flexbox to achieve a grid - Flex-basis 50% on mobile to achieve 2 items in row - Flex-basis 25% on desktop to achieve 4 items in a row

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6342,3 +6342,27 @@ Hailey Jane Custom Process
     }
   }
 }
+
+
+/* =======================================================================
+
+Hailey Jane Collections
+========================================================================== */
+
+.hj-collection-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -10px;
+  @include media-query($medium-up) {
+    margin: -20px;
+  }
+}
+
+.hj-collection-item {
+  padding: 10px;
+  flex: 0 1 50%;
+  @include media-query($medium-up) {
+    flex: 0 1 25%;
+    padding: 20px;
+  }
+}
