--- a/snippets/collection__list-products.liquid
+++ b/snippets/collection__list-products.liquid
@@ -9,7 +9,7 @@
       {% assign block_width_desktop = 'half' %}
       {% capture mobile_count %}{% cycle '1', '2' %}{% endcapture %}
 
-      <div class="item item--large-gap item--desktop--half item--mobile--full {% if forloop.first %}item--first{% endif %}  {% if last_col %}item--last{% endif %}  {% if fade_in %}fade-in{% endif %}">
+      <div class="kim item item--large-gap item--desktop--half item--mobile--full {% if forloop.first %}item--first{% endif %}  {% if last_col %}item--last{% endif %}  {% if fade_in %}fade-in{% endif %}">
         <div class="item__inner {% if mobile_count == '1' %}md--dn--pr4{% else %}md--dn--pl4{% endif %} {% if col_count_desktop == 2 or col_count_desktop == 3 %}lg--up--five-sixths lg--up--mx--auto{% endif %}">
           {% include 'product-grid-item', text_color: section.settings.section_color %}
         </div>
@@ -20,6 +20,6 @@
         {% assign col_count_desktop = 1 %}
       {% endif %}
     {% endfor %}
-    
+
   </div>
 </div>
