--- a/snippets/global-variables.liquid
+++ b/snippets/global-variables.liquid
@@ -1,5 +1,6 @@
 {%- assign global__section_with_padding_class = 'py4 lg--up--py5' -%}
 {%- assign global__heading_font_size = 'f--heading font-size--xxxl line-height--8 wd--font-size--xxxxl wd--line-height--11' -%}
+{%- assign hj__heading_font_size = 'f--heading line-height--8' -%}
 {%- assign global__basic_font_size = 'font-size--sm line-height--4 wd--font-size--m wd--line-height--4' -%}
 {%- assign global__small_font_size = 'font-size--xs line-height--4 wd--font-size--s wd--line-height--4' -%}
 
