--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -7,16 +7,14 @@
   <div class="{{ global__section_with_padding_class }} color--{{ section_color }}-text bg--{{ section_color }}-background">
     <div class="max-site-width lg--up--px3">
       <div class="lg--up--grid">
-        <div class="lg--up--grid__item lg--up--one-quarter">
+        <div class="lg--up--grid__item">
           <div class="featured-collection__info pb3 pl2 pr4 lg--up--px0">
             <h2 class="{{ global__heading_font_size }}">{{ section.settings.product_recommendations_heading }}</h2>
           </div>
-        </div>
-        <div class="lg--up--grid__item lg--up--three-quarters">
           <div class="mobile-flickity relative">
             <div class="mobile-flickity__slides pb3 lg--up--grid grid--uniform lg--up--mtn3">
               {%- for product in recommendations.products -%}
-              <div class="product-grid-item nine-twelfths md--six-twelfths lg--up--grid__item lg--up--one-third lg--up--mt3">
+              <div class="product-grid-item nine-twelfths md--six-twelfths lg--up--grid__item lg--up--one-quarter lg--up--mt3">
                 <div class="px2 lg--up--px0">{% include 'product-grid-item' %}</div>
               </div>
               {%- endfor -%}
