Applied small font and positioning spacing

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -398,7 +398,7 @@ $line-height-10: 3rem !default;
 $line-height-11: 3.25rem !default;
 $line-height-12: 3.5rem !default;
 $line-height-13: 3.75rem !default;
-$letter-spacing: 1.2rem !default;
+$letter-spacing: 1px !default;
 $caps-letter-spacing: 0.1em !default;
 $bold-font-weight: bold !default;
 
@@ -2966,7 +2966,7 @@ h6 {
 $font-size--xxxxxxl: 3.5rem;
 $font-size--xxxxxl: 3rem;
 $font-size--xxxxl: 2.5rem;
-$font-size--xxxl: 2.25rem;
+$font-size--xxxl: 2.0rem;
 $font-size--xxl: 1.85rem;
 $font-size--xl: 1.5rem;
 $font-size--lxl: 1.35rem;
@@ -4834,6 +4834,7 @@ Rich Text Editor
 
 .rte {
   font-family: $main-font-stack;
+  letter-spacing: 1px;
 
   img {
     height: auto;
