--- a/snippets/hj-header-active.liquid
+++ b/snippets/hj-header-active.liquid
@@ -1,7 +1,7 @@
 {%- assign section_color = 'active' -%}
 {%- include 'global-variables' -%}
 
-<div class="hj-header-menu header__active lg--up--relative color--{{ section_color }}-text" data-header-active>
+<div class="hj-header-menu lg--up--pb3 header__active lg--up--relative color--{{ section_color }}-text" data-header-active>
   <div class="max-site-width px2 lg--up--px3">
     <div class="header__active lg--up--relative color--{{ section_color }}-text" data-header-active>
 
