--- a/sections/hj-custom-cascade.liquid
+++ b/sections/hj-custom-cascade.liquid
@@ -23,7 +23,7 @@
       {{ section.settings.paragraph }}
     </div> -->
     <h3 class="f--heading mb1">
-      {{ section.settings.paragraph }}
+      {{ page.content }}
     </h3>
   </div>
 </section>
@@ -49,16 +49,6 @@
       "type": "text",
       "label": "Subheading",
       "default": "Why this is special"
-    },
-    {
-      "type": "header",
-      "content": "Text"
-    },
-    {
-      "id": "paragraph",
-      "type": "richtext",
-      "label": "Text",
-      "default": "<p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p>"
     }
   ],
   "blocks": [
